syntax = "proto3";

option java_multiple_files = true;
option java_package = "com.example.grpc.patient";
option java_outer_classname = "PatientProto";

//////////////////////// GET PATIENT BY ID //////////////////////////////
message PatientRequest{
  int32 id = 1;
}

message PatientResponse{
  string fullName = 1;
  string address = 2;
  string dateOfBirth = 3;
  string gender = 4;
  string phone = 5;

  int32 id = 6;
}
/////////////////////////////////////////////////////////////////////////

///////////////////////////// CREATE NEW PATIENT ////////////////////////
message CreatePatientRequest{
  string fullName = 1;
  string dateOfBirth = 2;
  string gender = 3;
  string address = 4;
  string phone = 5;
  string email = 6;

  string createdBy = 7;
}

message CreatePatientResponse{
  string fullName = 1;
  string gender = 2;
  string address = 3;
  string phone = 4;
  string dateOfBirth = 5;
}

/////////////////////////////////////////////////////////////////////////

///////////////////////////// MODIFY PATIENT ////////////////////////////

message UpdatePatientRequestGRPC{
  int32 id = 6;
  string fullName = 1;
  string dateOfBirth = 2;
  string gender = 3;
  string address = 4;
  string phone = 5;
}

/////////////////////////////////////////////////////////////////////////

///////////////////////////// SEARCH PATIENT ////////////////////////////

message SearchPatientRequestGRPC{
  string keyword = 1;
}

message SearchPatientResponseGRPC{
  repeated PatientResponse patients = 1;
}

///////////////////////////////  SERVICE ///////////////////////////////
service PatientService{
  rpc GetPatientById (PatientRequest) returns (PatientResponse);
  rpc CreatePatient(CreatePatientRequest) returns (PatientResponse);
  rpc UpdatePatient(UpdatePatientRequestGRPC) returns (PatientResponse);

  rpc SearchPatient(SearchPatientRequestGRPC) returns (SearchPatientResponseGRPC);
}